--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section>
@@ -13,7 +14,29 @@
             <form>
                 <input type="text" placeholder="What are you craving?">
             </form>
-
+            <div class="item">
+                <img src="./img-1.jpeg" alt="">
+                <div class="flex-container">
+                    <h1 class="title">Recipe</h1>
+                    <a href="#">View Recipe</a>
+                </div>
+                <p class="item-data">Calories: 120</p>
+            </div>
+            <div class="item">
+                <img src="./img-1.jpeg" alt="">
+                <div class="flex-container">
+                    <h1 class="title">Recipe</h1>
+                    <a href="#">View Recipe</a>
+                </div>
+                <p class="item-data">Calories: 120</p>
+            </div>            <div class="item">
+                <img src="./img-1.jpeg" alt="">
+                <div class="flex-container">
+                    <h1 class="title">Recipe</h1>
+                    <a href="#">View Recipe</a>
+                </div>
+                <p class="item-data">Calories: 120</p>
+            </div>
         </div>
     </section>
 
