--- a/index.html
+++ b/index.html
@@ -13,33 +13,35 @@
             <h1 class="main-title">Provecho</h1>
             <form>
                 <input type="text" placeholder="What are you craving?">
+                <button name="search">Find</button>
             </form>
-            <div class="item">
-                <img src="./img-1.jpeg" alt="">
-                <div class="flex-container">
-                    <h1 class="title">Recipe</h1>
-                    <a href="#">View Recipe</a>
+            <div class="search-result">
+                <div class="item">
+                    <img src="./img-1.jpeg" alt="">
+                    <div class="flex-container">
+                        <h1 class="title">Recipe</h1>
+                        <a href="#">View Recipe</a>
+                    </div>
+                    <p class="item-data">Calories: 120</p>
                 </div>
-                <p class="item-data">Calories: 120</p>
-            </div>
-            <div class="item">
-                <img src="./img-1.jpeg" alt="">
-                <div class="flex-container">
-                    <h1 class="title">Recipe</h1>
-                    <a href="#">View Recipe</a>
+                <div class="item">
+                    <img src="./img-1.jpeg" alt="">
+                    <div class="flex-container">
+                        <h1 class="title">Recipe</h1>
+                        <a href="#">View Recipe</a>
+                    </div>
+                    <p class="item-data">Calories: 120</p>
                 </div>
-                <p class="item-data">Calories: 120</p>
-            </div>            <div class="item">
-                <img src="./img-1.jpeg" alt="">
-                <div class="flex-container">
-                    <h1 class="title">Recipe</h1>
-                    <a href="#">View Recipe</a>
+                <div class="item">
+                    <img src="./img-1.jpeg" alt="">
+                    <div class="flex-container">
+                        <h1 class="title">Recipe</h1>
+                        <a href="#">View Recipe</a>
+                    </div>
+                    <p class="item-data">Calories: 120</p>
                 </div>
-                <p class="item-data">Calories: 120</p>
             </div>
         </div>
     </section>
-
-
 </body>
 </html>
