--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img src="./img-1.jpeg" alt="">
                     <div class="flex-container">
                         <h1 class="title">Recipe</h1>
-                        <a href="#">View Recipe</a>
+                        <a class="view-recipe" href="#">View Recipe</a>
                     </div>
                     <p class="item-data">Calories: 120</p>
                 </div>
@@ -28,7 +28,7 @@
                     <img src="./img-1.jpeg" alt="">
                     <div class="flex-container">
                         <h1 class="title">Recipe</h1>
-                        <a href="#">View Recipe</a>
+                        <a class="view-recipe" href="#">View Recipe</a>
                     </div>
                     <p class="item-data">Calories: 120</p>
                 </div>
@@ -36,7 +36,7 @@
                     <img src="./img-1.jpeg" alt="">
                     <div class="flex-container">
                         <h1 class="title">Recipe</h1>
-                        <a href="#">View Recipe</a>
+                        <a class="view-recipe" href="#">View Recipe</a>
                     </div>
                     <p class="item-data">Calories: 120</p>
                 </div>
@@ -44,4 +44,5 @@
         </div>
     </section>
 </body>
+<script src="script.js"></script>
 </html>
