got the search to console.log item

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="sticky" >
+        <ul>
+         
+        </ul>
+    </nav>
     <section>
         <div class="container">
             <h1 class="main-title">Provecho</h1>
